--- a/src/app/eventos/eventos.component.html
+++ b/src/app/eventos/eventos.component.html
@@ -1,15 +1,15 @@
 <div class="form-inline">
   <div class="form-group mb-2">
+    <label class="mr-2">Filtro:</label>
     <input
       type="text"
       class="form-control mr-2"
       placeholder="Buscar"
       [(ngModel)]="filtroLista"
     />
-    <button class="btn btn-outline-success">Buscar</button>
   </div>
 </div>
-<h3>{{ filtroLista }}</h3>
+<!-- <h3>{{ filtroLista }}</h3> -->
 <table class="table table-striped">
   <thead class="table-dark">
     <tr>
@@ -48,7 +48,13 @@
       <td>{{ evento.dataEvento }}</td>
       <td>{{ evento.qtdPessoas }}</td>
       <td>{{ evento.lote }}</td>
-      <td>asdasd</td>
+
+      <td>
+        <button type="button" class="btn btn-primary btn-sm mr-2">
+          Editar
+        </button>
+        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+      </td>
     </tr>
   </tbody>
   <tfoot *ngIf="!eventos">
