--- a/src/app/eventos/eventos.component.html
+++ b/src/app/eventos/eventos.component.html
@@ -19,6 +19,7 @@
           class="btn btn-outline-light btn-sm"
           (click)="mostrarImg()"
         >
+          <i class="{{ mostrarImgBool ? 'fa fa-eye' : 'fa fa-eye-slash' }}"></i>
           {{ mostrarImgBool ? "Mostrar" : "Ocultar" }}
         </button>
       </th>
@@ -42,18 +43,29 @@
           [style.margin.px]="marginImg"
         />
       </td>
-      <td>{{ evento.eventoId }}</td>
+      <td>{{ evento.id }}</td>
       <td>{{ evento.tema }}</td>
       <td>{{ evento.local }}</td>
-      <td>{{ evento.dataEvento }}</td>
+      <td>{{ evento.dataEvento | DateTimeFormatPipe }}</td>
       <td>{{ evento.qtdPessoas }}</td>
-      <td>{{ evento.lote }}</td>
+      <td>{{ evento.lotes[0].nome }}</td>
 
       <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2">
-          Editar
+        <button
+          type="button"
+          class="btn btn-primary btn-sm mr-2"
+          tooltip="Editar"
+        >
+          <i class="fa fa-edit"></i>
         </button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+        <button
+          type="button"
+          class="btn btn-danger btn-sm"
+          tooltip="Excluir"
+          (click)="openModal(template)"
+        >
+          <i class="fa fa-trash"></i>
+        </button>
       </td>
     </tr>
   </tbody>
@@ -63,3 +75,15 @@
     </td>
   </tfoot>
 </table>
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Tem certeza que deseja deletar esse evento?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="decline()">
+      Não
+    </button>
+  </div>
+</ng-template>
