--- a/src/app/eventos/eventos.component.html
+++ b/src/app/eventos/eventos.component.html
@@ -27,7 +27,7 @@
       <th>Tema</th>
       <th>Local</th>
       <th>Data</th>
-      <th>Qtde Pessoas</th>
+      <th>Qtd Pessoas</th>
       <th>Lote</th>
       <th>Opções</th>
     </tr>
