--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-nav> </app-nav>
 <div class="container">
-  <h2>Eventos</h2>
-  <hr />
   <app-eventos> </app-eventos>
 
   <router-outlet></router-outlet>
 </div>
+
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
