--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -1,3 +1,4 @@
+<app-titulo [titulo]="'Eventos'"></app-titulo>
 <div class="form-inline">
   <div class="form-group mb-2">
     <label class="mr-2">Filtro:</label>
