--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -13,16 +13,16 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#"
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="eventos"
           >Eventos <span class="sr-only">(current)</span></a
         >
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Palestrantes</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="palestrante">Palestrantes</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contato</a>
+      <li class="nav-item"routerLinkActive="active">
+        <a class="nav-link" routerLink="contato">Contato</a>
       </li>
     </ul>
     <ul class="navbar-nav mr-5">
@@ -43,7 +43,7 @@
           class="dropdown-menu pad dropdown-menu-right"
           aria-labelledby="navbarDropdownMenuLink"
         >
-          <a class="dropdown-item" href="#"> Perfil </a>
+          <a class="dropdown-item" routerLink="perfil" routerLinkActive="active"> Perfil </a>
           <div role="separator" class="divider"></div>
           <a class="dropdown-item" href="#"> Sair </a>
         </div>
