--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -36,7 +36,7 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
-          Vinícius
+          Robson
         </a>
         <div
           *dropdownMenu
